# uv-workspace-example

./: Dockerfile  README.md  pyproject.toml
apps/printer/: pyproject.toml
apps/printer/tests/: test_printer_import.py
apps/printer/una_example_packages/printer/: __init__.py
libs/greeter/: pyproject.toml
libs/greeter/tests/: test_greeter_import.py
libs/greeter/una_example_packages/greeter/: __init__.py
